Resolicion vista movil timeline, falta otra parte

--- a/src/app/modules/home/components/timeline/timeline.component.html
+++ b/src/app/modules/home/components/timeline/timeline.component.html
@@ -1,7 +1,6 @@
 <div class="timeline">
   <div
-    class="timeline__event animated fadeInUp delay-3s timeline__event--type1" data-index="0"
-  >
+    class="timeline__event animated fadeInUp delay-3s timeline__event--type1" data-index="0">
     <div class="timeline__event__icon">
       <ion-icon name="person-add-outline"></ion-icon>
     </div>
