--- a/src/app/modules/user-page/components/notis/notis.component.html
+++ b/src/app/modules/user-page/components/notis/notis.component.html
@@ -1,26 +1,20 @@
-<ion-card>
-  <ion-card-content>
-    <ion-icon name="warning-outline" color="warning" size="large"></ion-icon>
-    <p class="no-notifications-message">No hay notificaciones</p>
-  </ion-card-content>
-</ion-card>
+<ion-content color="light">
+  <ion-card>
+    <ion-card-content>
+      <ion-icon name="warning-outline" color="warning" size="large"></ion-icon>
+      <p class="no-notifications-message">No hay notificaciones</p>
+    </ion-card-content>
+  </ion-card>
 
-<ion-list>
-  <ion-item>
-    <ion-label (click)="showAlert('present-alert')">Pokémon Yellow</ion-label>
-  </ion-item>
-  <ion-item>
-    <ion-label>Mega Man X</ion-label>
-  </ion-item>
-  <ion-item>
-    <ion-label>The Legend of Zelda</ion-label>
-  </ion-item>
-  <ion-item>
-    <ion-label>Pac-Man</ion-label>
-  </ion-item>
-  <ion-item>
-    <ion-label>Super Mario World</ion-label>
-  </ion-item>
-</ion-list>
-
-
+  <ion-list [inset]="true">
+    <ion-item>
+      <ion-label (click)="showAlert('present-alert')">Pokémon Yellow</ion-label>
+    </ion-item>
+    <ion-item [ngClass]="{'unread-item': isUnread}">
+      <ion-label>
+        <h1>Prueba</h1>
+        <p>A message should be a short, complete sentence.</p>
+      </ion-label>
+    </ion-item>
+  </ion-list>
+</ion-content>
