Añadir lógica para finalizar el periodo de compra en el componente TimerComponent y actualizar la visualización en el componente UserPageComponent

--- a/src/app/modules/user-page/user-page.component.html
+++ b/src/app/modules/user-page/user-page.component.html
@@ -46,8 +46,8 @@
 
   <div class="ion-page" id="main">
     <ion-content class="ion-padding">
-        <app-timer [ngClass]="{'ion-hide': optionSelected !== 1}"></app-timer>
-        <app-notis [ngClass]="{'ion-hide': optionSelected !== 4}"></app-notis>
+        <app-timer *ngIf="optionSelected === 1"></app-timer>
+        <app-notis *ngIf="optionSelected === 4"></app-notis>
     </ion-content>
 
   </div>
@@ -106,8 +106,8 @@
     </ion-toolbar>
   </ion-header>
   <ion-content class="ion-padding">
-    <app-timer [ngClass]="{'ion-hide': optionSelected !== 1}"></app-timer>
-    <app-notis [ngClass]="{'ion-hide': optionSelected !== 4}"></app-notis>
+    <app-timer *ngIf="optionSelected === 1"></app-timer>
+    <app-notis *ngIf="optionSelected === 4"></app-notis>
   </ion-content>
 </div>
 </div>
