--- a/src/app/modules/user-page/components/timer/timer.component.html
+++ b/src/app/modules/user-page/components/timer/timer.component.html
@@ -8,3 +8,4 @@
     <div *ngIf="!finished"><strong>{{ time.seconds }}</strong> <span>Segundos</span></div>
   </div>
 </div>
+<app-event-item></app-event-item>
