--- a/src/app/modules/user-page/components/card-payment/card-payment.component.html
+++ b/src/app/modules/user-page/components/card-payment/card-payment.component.html
@@ -1,80 +1,62 @@
-<section class="h-100 h-custom">
-  <div class="container py-5 h-100">
-    <div class="row d-flex justify-content-center align-items-center h-100">
-      <div class="col">
-        <div class="card">
-          <div class="card-body p-4">
-            <div class="col-lg-5">
-              <div class="card bg-primary text-white rounded-3">
-                <div class="card-body">
-                  <div class="d-flex justify-content-between align-items-center mb-4">
-                    <h5 class="mb-0">Card details</h5>
-                  </div>
-
-                  <p class="small mb-2">Card type</p>
-                  <a href="#!" type="submit" class="text-white"><i
-                      class="fab fa-cc-mastercard fa-2x me-2"></i></a>
-                  <a href="#!" type="submit" class="text-white"><i
-                      class="fab fa-cc-visa fa-2x me-2"></i></a>
-                  <a href="#!" type="submit" class="text-white"><i
-                      class="fab fa-cc-amex fa-2x me-2"></i></a>
-                  <a href="#!" type="submit" class="text-white"><i class="fab fa-cc-paypal fa-2x"></i></a>
-
-                  <form class="mt-4">
-                    <div data-mdb-input-init class="form-outline form-white mb-4">
-                      <input type="text" id="typeName" class="form-control form-control-lg" siez="17"
-                        placeholder="Cardholder's Name" />
-                      <label class="form-label" for="typeName">Cardholder's Name</label>
+<div class="container">
+  <section class="h-100 h-custom">
+    <div class="container py-5 h-100">
+      <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col">
+          <div class="card">
+            <div class="card-body p-4">
+              <div class="col-12">
+                <div class="card bg-body-secondary rounded-3">
+                  <div class="card-body">
+                    <div class="d-flex justify-content-between align-items-center mb-4">
+                      <h5 class="mb-0">Detalles de la tarjeta</h5>
                     </div>
 
-                    <div data-mdb-input-init class="form-outline form-white mb-4">
-                      <input type="text" id="typeText" class="form-control form-control-lg" siez="17"
-                        placeholder="1234 5678 9012 3457" minlength="19" maxlength="19" />
-                      <label class="form-label" for="typeText">Card Number</label>
-                    </div>
+                    <form class="mt-4">
+                      <div data-mdb-input-init class="form-outline form-white mb-4">
+                        <input type="text" id="typeName" class="form-control form-control-lg"
+                          placeholder="Nombre del titular" />
+                        <label class="form-label" for="typeName">Nombre del titular</label>
+                      </div>
 
-                    <div class="row mb-4">
-                      <div class="col-md-6">
-                        <div data-mdb-input-init class="form-outline form-white">
-                          <input type="text" id="typeExp" class="form-control form-control-lg"
-                            placeholder="MM/YYYY" size="7" id="exp" minlength="7" maxlength="7" />
-                          <label class="form-label" for="typeExp">Expiration</label>
+                      <div data-mdb-input-init class="form-outline form-white mb-4">
+                        <input type="text" id="typeText" class="form-control form-control-lg"
+                          placeholder="1234123412341234" minlength="16" maxlength="16" />
+                        <label class="form-label" for="typeText">Número de tarjeta</label>
+                      </div>
+
+                      <div class="row mb-4">
+                        <div class="col-md-6">
+                          <div data-mdb-input-init class="form-outline form-white">
+                            <input type="text" id="typeExp" class="form-control form-control-lg"
+                              placeholder="MM/YYYY" size="7" id="exp" minlength="7" maxlength="7" />
+                            <label class="form-label" for="typeExp">Caducidad</label>
+                          </div>
+                        </div>
+                        <div class="col-md-6">
+                          <div data-mdb-input-init class="form-outline form-white">
+                            <input type="password" id="typeText" class="form-control form-control-lg"
+                              placeholder="&#9679;&#9679;&#9679;" size="1" minlength="3" maxlength="3" />
+                            <label class="form-label" for="typeText">CVV</label>
+                          </div>
                         </div>
                       </div>
-                      <div class="col-md-6">
-                        <div data-mdb-input-init class="form-outline form-white">
-                          <input type="password" id="typeText" class="form-control form-control-lg"
-                            placeholder="&#9679;&#9679;&#9679;" size="1" minlength="3" maxlength="3" />
-                          <label class="form-label" for="typeText">Cvv</label>
-                        </div>
+
+                    </form>
+
+                    <hr class="my-4">
+
+                    <div class="d-flex ion-justify-content-start mb-4">
+                      <b><p class="mb-2">Total: </p></b>
+                      <p class="mb-2"> $4818.00</p>
+                    </div>
+
+                    <button type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-info btn-block btn-lg">
+                      <div class="d-flex justify-content-between">
+                        <span>Pagar</span>
                       </div>
-                    </div>
-
-                  </form>
-
-                  <hr class="my-4">
-
-                  <div class="d-flex justify-content-between">
-                    <p class="mb-2">Subtotal</p>
-                    <p class="mb-2">$4798.00</p>
+                    </button>
                   </div>
-
-                  <div class="d-flex justify-content-between">
-                    <p class="mb-2">Shipping</p>
-                    <p class="mb-2">$20.00</p>
-                  </div>
-
-                  <div class="d-flex justify-content-between mb-4">
-                    <p class="mb-2">Total(Incl. taxes)</p>
-                    <p class="mb-2">$4818.00</p>
-                  </div>
-
-                  <button type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-info btn-block btn-lg">
-                    <div class="d-flex justify-content-between">
-                      <span>$4818.00</span>
-                      <span>Checkout <i class="fas fa-long-arrow-alt-right ms-2"></i></span>
-                    </div>
-                  </button>
                 </div>
               </div>
             </div>
@@ -82,5 +64,5 @@
         </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
+</div>
