--- a/src/app/modules/user-page/components/card-payment/card-payment.component.scss
+++ b/src/app/modules/user-page/components/card-payment/card-payment.component.scss
@@ -6,3 +6,12 @@
 section{
     background-color: #eee;
 }
+.container{
+    position: relative;
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    background-image: url("../../../../../assets/pag_principal.webp");
+    background-size: cover;
+    background-position: center;
+}
