div página de pago centrado

--- a/src/app/modules/user-page/components/card-payment/card-payment.component.html
+++ b/src/app/modules/user-page/components/card-payment/card-payment.component.html
@@ -1,9 +1,9 @@
 <div class="container">
-  <section class="h-100 h-custom">
+  <section class="h-100 h-custom justify-content-center align-items-center">
     <div class="container py-5 h-100">
       <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col">
-          <div class="card">
+          <div class="card col-6 m-auto">
             <div class="card-body p-4">
               <div class="col-12">
                 <div class="card bg-body-secondary rounded-3">
@@ -46,12 +46,12 @@
 
                     <hr class="my-4">
 
-                    <div class="d-flex ion-justify-content-start mb-4">
-                      <b><p class="mb-2">Total: </p></b>
-                      <p class="mb-2"> $4818.00</p>
+                    <div class="d-flex ion-justify-content-center mb-4">
+                      <b><p class="mb-2">Total:</p></b>
+                      <p class="mb-2 mx-1">$4818.00</p>
                     </div>
 
-                    <button type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-info btn-block btn-lg">
+                    <button type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-info btn-block btn-lg d-table m-auto">
                       <div class="d-flex justify-content-between">
                         <span>Pagar</span>
                       </div>
