--- a/src/app/modules/user-page/user-page.component.html
+++ b/src/app/modules/user-page/user-page.component.html
@@ -9,34 +9,56 @@
     </ion-header>
     <ion-content class="ion-padding">
       <ion-grid>
-        <ion-row>
-          <ion-col></ion-col>
-          <ion-col (click)="selectedOption(1)"><ion-icon name="home-outline"></ion-icon>  Inicio</ion-col>
-          <ion-col></ion-col>
+        <ion-row>       
+          <ion-col size="12" size-md="12" size-lg="6" size-xl="6" (click)="selectedOption(1)">
+            <ion-card class="ion-text-center" color="primary">
+              <ion-icon name="home-outline" size="large"></ion-icon>
+              <ion-card-content>
+                Inicio
+              </ion-card-content>
+            </ion-card>
+          </ion-col>
+          <ion-col size="12" size-md="12" size-lg="6" size-xl="6" (click)="selectedOption(4)">
+            <ion-card class="ion-text-center" color="primary">
+              <ion-icon name="notifications-outline" size="large"></ion-icon>
+              <ion-card-content>
+                Notis
+              </ion-card-content>
+            </ion-card>
+          </ion-col>
         </ion-row>
-        <ion-row *ngIf="isPurchasePeriod">
-          <ion-col></ion-col>
-          <ion-col (click)="selectedOption(2)"><ion-icon name="card-outline"></ion-icon>  Comprar</ion-col>
-          <ion-col></ion-col>
+        <ion-row *ngIf="isPurchasePeriod">        
+          <ion-col size="12" size-md="12" size-lg="6" size-xl="6" (click)="selectedOption(2)">
+            <ion-card class="ion-text-center" color="primary" >
+              <ion-icon name="card-outline" size="large"></ion-icon>
+              <ion-card-content>
+                Comprar
+              </ion-card-content>
+            </ion-card>
+          </ion-col>
+          <ion-col size="12" size-md="12" size-lg="6" size-xl="6" (click)="selectedOption(3)">
+            <ion-card class="ion-text-center" color="primary">
+              <ion-icon name="cart-outline" size="large"></ion-icon>
+              <ion-card-content>
+                Carrito
+              </ion-card-content>
+            </ion-card>
+          </ion-col>
         </ion-row>
-        <ion-row *ngIf="isPurchasePeriod">
-          <ion-col></ion-col>
-          <ion-col (click)="selectedOption(3)"><ion-icon name="cart-outline"></ion-icon> Carrito</ion-col>
-          <ion-col></ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col></ion-col>
-          <ion-col (click)="selectedOption(4)"><ion-icon name="notifications-outline"></ion-icon> Notis</ion-col>
-          <ion-col></ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col></ion-col>
-          <ion-col (click)="selectedOption(5)"><ion-icon name="card-outline"></ion-icon>Pago</ion-col>
-          <ion-col></ion-col>
-        </ion-row>
+        <ion-col size="12" size-md="12" size-lg="6" size-xl="6"></ion-col>
       </ion-grid>
     </ion-content>
+    
     <ion-footer>
+      <button class="button" (click)="selectedOption(5)">
+        <span class="button-decor"></span>
+        <div class="button-content">
+            <div class="button__icon">
+              <ion-icon name="card-outline"></ion-icon>
+            </div>
+            <span class="button__text">Pago</span>
+        </div>
+      </button>
       <button class="button" (click)="logout()">
         <span class="button-decor"></span>
         <div class="button-content">
@@ -66,37 +88,58 @@
     <ion-toolbar class="boxShadow">
       <img src="../../../assets/2024_Summer_Olympics_text_logo.svg.png">
     </ion-toolbar>
-  </ion-header><ion-content class="ion-padding">
+  </ion-header> <ion-content class="ion-padding">
     <ion-grid>
-      <ion-row>
-        <ion-col></ion-col>
-        <ion-col (click)="selectedOption(1)"><ion-icon name="home-outline"></ion-icon>  Inicio</ion-col>
-        <ion-col></ion-col>
+      <ion-row>       
+        <ion-col size="12" size-md="12" size-lg="6" size-xl="6" (click)="selectedOption(1)">
+          <ion-card class="ion-text-center">
+            <ion-icon name="home-outline" size="large"></ion-icon>
+            <ion-card-content>
+              Inicio
+            </ion-card-content>
+          </ion-card>
+        </ion-col>
+        <ion-col size="12" size-md="12" size-lg="6" size-xl="6" (click)="selectedOption(4)">
+          <ion-card class="ion-text-center">
+            <ion-icon name="notifications-outline" size="large"></ion-icon>
+            <ion-card-content>
+              Notis
+            </ion-card-content>
+          </ion-card>
+        </ion-col>
       </ion-row>
-      <ion-row *ngIf="isPurchasePeriod">
-        <ion-col></ion-col>
-        <ion-col (click)="selectedOption(2)"><ion-icon name="card-outline"></ion-icon>  Comprar</ion-col>
-        <ion-col></ion-col>
+      <ion-row *ngIf="isPurchasePeriod">        
+        <ion-col size="12" size-md="12" size-lg="6" size-xl="6" (click)="selectedOption(2)">
+          <ion-card class="ion-text-center">
+            <ion-icon name="card-outline" size="large"></ion-icon>
+            <ion-card-content>
+              Comprar
+            </ion-card-content>
+          </ion-card>
+        </ion-col>
+        <ion-col size="12" size-md="12" size-lg="6" size-xl="6" (click)="selectedOption(3)">
+          <ion-card class="ion-text-center">
+            <ion-icon name="cart-outline" size="large"></ion-icon>
+            <ion-card-content>
+              Carrito
+            </ion-card-content>
+          </ion-card>
+        </ion-col>
       </ion-row>
-      <ion-row *ngIf="isPurchasePeriod">
-        <ion-col></ion-col>
-        <ion-col (click)="selectedOption(3)"><ion-icon name="cart-outline"></ion-icon> Carrito</ion-col>
-        <ion-col></ion-col>
-      </ion-row>
-      <ion-row>
-        <ion-col></ion-col>
-        <ion-col (click)="selectedOption(4)"><ion-icon name="notifications-outline"></ion-icon> Notis</ion-col>
-        <ion-col></ion-col>
-      </ion-row>
-      <ion-row>
-        <ion-col></ion-col>
-        <ion-col (click)="selectedOption(5)"><ion-icon name="card-outline"></ion-icon>Pago</ion-col>
-        <ion-col></ion-col>
-      </ion-row>
+      <ion-col size="12" size-md="12" size-lg="6" size-xl="6"></ion-col>
     </ion-grid>
   </ion-content>
 
   <ion-footer>
+    <button class="button" (click)="selectedOption(5)">
+      <span class="button-decor"></span>
+      <div class="button-content">
+          <div class="button__icon">
+            <ion-icon name="card-outline"></ion-icon>
+          </div>
+          <span class="button__text">Pago</span>
+      </div>
+    </button>
     <button class="button" (click)="logout()">
       <span class="button-decor"></span>
       <div class="button-content">
