--- a/src/app/modules/user-page/components/event-details/event-details.component.html
+++ b/src/app/modules/user-page/components/event-details/event-details.component.html
@@ -1,53 +1,44 @@
-<section class="product">
-	<div class="product__photo">
-		<div class="photo-container">
-			<div class="photo-main">
-				<div class="controls">
-					<i class="material-icons">share</i>
-					<i class="material-icons">favorite_border</i>
-				</div>
-				<img src="https://res.cloudinary.com/john-mantas/image/upload/v1537291846/codepen/delicious-apples/green-apple-with-slice.png" alt="green apple slice">
-			</div>
-			<div class="photo-album">
-				<ul>
-					<li><img src="https://res.cloudinary.com/john-mantas/image/upload/v1537302064/codepen/delicious-apples/green-apple2.png" alt="green apple"></li>
-					<li><img src="https://res.cloudinary.com/john-mantas/image/upload/v1537303532/codepen/delicious-apples/half-apple.png" alt="half apple"></li>
-					<li><img src="https://res.cloudinary.com/john-mantas/image/upload/v1537303160/codepen/delicious-apples/green-apple-flipped.png" alt="green apple"></li>
-					<li><img src="https://res.cloudinary.com/john-mantas/image/upload/v1537303708/codepen/delicious-apples/apple-top.png" alt="apple top"></li>
-				</ul>
-			</div>
-		</div>
-	</div>
-	<div class="product__info">
-		<div class="title">
-			<h1>Delicious Apples</h1>
-			<span>COD: 45999</span>
-		</div>
-		<div class="price">
-			R$ <span>7.93</span>
-		</div>
-		<div class="variant">
-			<h3>SELECT A COLOR</h3>
-			<ul>
-				<li><img src="https://res.cloudinary.com/john-mantas/image/upload/v1537302064/codepen/delicious-apples/green-apple2.png" alt="green apple"></li>
-				<li><img src="https://res.cloudinary.com/john-mantas/image/upload/v1537302752/codepen/delicious-apples/yellow-apple.png" alt="yellow apple"></li>
-				<li><img src="https://res.cloudinary.com/john-mantas/image/upload/v1537302427/codepen/delicious-apples/orange-apple.png" alt="orange apple"></li>
-				<li><img src="https://res.cloudinary.com/john-mantas/image/upload/v1537302285/codepen/delicious-apples/red-apple.png" alt="red apple"></li>
-			</ul>
-		</div>
-		<div class="description">
-			<h3>BENEFITS</h3>
-			<ul>
-				<li>Apples are nutricious</li>
-				<li>Apples may be good for weight loss</li>
-				<li>Apples may be good for bone health</li>
-				<li>They're linked to a lowest risk of diabetes</li>
-			</ul>
-		</div>
-		<button class="buy--btn">ADD TO CART</button>
-	</div>
-</section>
+<section class="product w-100">
+  <div class="product__photo">
+    <div class="photo-container">
+      <div class="photo-main">
+        <img src="https://olympics.com/images/static/sports/pictograms/v2/ath.svg" alt="green apple slice">
+      </div>
+    </div>
+  </div>
+  <div class="product__info">
+    <div class="title">
+      <h1>Delicious Apples</h1>
+      <span>Eventos deportivos</span>
+    </div>
+    <div class="price">
+      R$ <span>7.93</span>
+    </div>
+    <div class="variant">
+      <h3>SELECCIONE UN SECCIÓN</h3>
+      <div class="custom-select">
+        <select>
+          <option value="">Seleccione una sección</option>
+          <option value="">Sección 1</option>
+          <option value="">Sección 2</option>
+          <option value="">Sección 3</option>
+          <option value="">Sección 4</option>
+        </select>
+      </div>
+    </div>
+    <div class="variant mt-2">
+      <h3>SELECCIONE UN NÚMERO DE UNIDADES</h3>
+      <input type="number" min="1" max="5" />
+    </div>
+    <div class="description">
+      <h3>INFO +</h3>
+      <p>Descripción corta</p>
+      <p>A parit del 20 de abril del 2024</p>
 
-<footer>
-	<p>Design from <a href="https://dribbble.com/shots/5216438-Daily-UI-012">dribbble shot</a> of <a href="https://dribbble.com/rodrigorramos">Rodrigo Ramos</a></p>
-</footer>
+    </div>
+    <button class="buy--btn1">Seguir comprando</button>
+    <button class="buy--btn2">Finalizar pedido</button>
+    
+
+  </div>
+</section>
