--- a/src/app/modules/user-page/components/event-details/event-details.component.scss
+++ b/src/app/modules/user-page/components/event-details/event-details.component.scss
@@ -7,7 +7,22 @@ $color-highlight: #ff3f40;
 * {
 	box-sizing: border-box;
 }
-
+@media (max-width: 800px) {
+	.product {
+	  grid-template-columns: 1fr;  
+	  margin-left: 1rem;  
+	}
+  
+	.photo-container {
+	  left: 0;  
+	}
+  
+	img {
+	  left: 0;
+	  max-width: 100%;
+	}
+  }
+  
 html,
 body {
 	height: 100%;
@@ -35,9 +50,8 @@ img {
 .product {
 	display: grid;
 	grid-template-columns: 0.9fr 1fr;
-	margin: auto;
+	margin-left: 5rem;
 	padding: 2.5em 0;
-	min-width: 600px;
 	background-color: white;
 	border-radius: 5px;
 }
@@ -48,7 +62,7 @@ img {
 }
 
 .photo-container {
-	position: absolute;
+	position: relative;
 	left: -2.5em;
 	display: grid;
 	grid-template-rows: 1fr;
@@ -142,10 +156,11 @@ img {
 	}
 
 	li {
-		float: left;
-		width: 35px;
-		height: 35px;
-		padding: 3px;
+		float:left;
+		width: 80px;
+		height: 30px;
+		padding: 2.5px;
+		list-style: none;
 		border: 1px solid transparent;
 		border-radius: 3px;
 		cursor: pointer;
@@ -163,7 +178,7 @@ img {
 
 .description {
 	clear: left;
-	margin: 2em 0;
+	margin: 0.5em 0;
 
 	h3 {
 		margin-bottom: 1em;
@@ -178,14 +193,34 @@ img {
 	li {
 		text-indent: -0.6em;
 		margin-bottom: 0.5em;
+		list-style: none;
+
 	}
 }
 
-.buy--btn {
+.buy--btn1 {
 	padding: 1.5em 3.1em;
 	border: none;
 	border-radius: 7px;
 	font-size: 0.8em;
+	font-weight: 700;
+	letter-spacing: 1.3px;
+	color: #e7e7e7;
+		background-color: $color-highlight;
+	box-shadow: 2px 2px 25px -7px $color-primary;
+	cursor: pointer;
+
+	&:active {
+		transform: scale(0.97);
+	}
+}
+
+.buy--btn2 {
+	padding: 1.5em 3.1em;
+	border: none;
+	border-radius: 7px;
+	font-size: 0.8em;
+	margin: 1rem;
 	font-weight: 700;
 	letter-spacing: 1.3px;
 	color: #fff;
@@ -198,17 +233,47 @@ img {
 	}
 }
 
-/* ----- Footer Section ----- */
-footer {
-	padding: 1em;
-	text-align: center;
-	color: #fff;
-
-	a {
-		color: $color-primary;
-
-		&:hover {
-			color: $color-highlight;
-		}
-	}
-}
+.custom-select {
+	min-width: 350px;
+	position: relative;
+	width:60%;
+  }
+  
+  select {
+	appearance: none;
+	/*  safari  */
+	-webkit-appearance: none;
+	/*  other styles for aesthetics */
+	width: 100%;
+	font-size: 1.15rem;
+	padding: 0.675em 6em 0.675em 1em;
+	background-color: #fff;
+	border: 1px solid #caced1;
+	border-radius: 0.25rem;
+	color: #000;
+	cursor: pointer;
+  }
+  
+  .custom-select::before,
+  .custom-select::after {
+	--size: 0.3rem;
+	content: "";
+	position: absolute;
+	right: 1rem;
+	pointer-events: none;
+  }
+  
+  .custom-select::before {
+	border-left: var(--size) solid transparent;
+	border-right: var(--size) solid transparent;
+	border-bottom: var(--size) solid black;
+	top: 40%;
+  }
+  
+  .custom-select::after {
+	border-left: var(--size) solid transparent;
+	border-right: var(--size) solid transparent;
+	border-top: var(--size) solid black;
+	top: 55%;
+  }
+  
