--- a/src/app/modules/user-page/user-page.component.html
+++ b/src/app/modules/user-page/user-page.component.html
@@ -27,7 +27,7 @@
             </ion-card>
           </ion-col>
         </ion-row>
-        <ion-row *ngIf="true"><!--isPurchasePeriod-->
+        <ion-row>
           <ion-col size="12" size-md="12" size-lg="6" size-xl="6" (click)="selectedOption(2)">
             <ion-card class="ion-text-center" color="primary" >
               <ion-icon name="card-outline" size="large"></ion-icon>
