--- a/src/app/modules/user-page/components/event-details/event-details.component.scss
+++ b/src/app/modules/user-page/components/event-details/event-details.component.scss
@@ -7,30 +7,14 @@ $color-highlight: #ff3f40;
 * {
 	box-sizing: border-box;
 }
-@media (max-width: 800px) {
-	.product {
-	  grid-template-columns: 1fr;  
-	  margin-left: 1rem;  
-	}
-  
-	.photo-container {
-	  left: 0;  
-	}
-  
-	img {
-	  left: 0;
-	  max-width: 100%;
-	}
-  }
-  
+
+
 html,
 body {
 	height: 100%;
 }
 
 body {
-	display: grid;
-	grid-template-rows: 1fr;
 	font-family: "Raleway", sans-serif;
 	background-color: #01e37f;
 }
@@ -42,39 +26,19 @@ h3 {
 }
 
 img {
-			max-width: 100%;
-			filter: drop-shadow(1px 1px 3px $color-secondary);
-		}
-
-/* ----- Product Section ----- */
-.product {
-	display: grid;
-	grid-template-columns: 0.9fr 1fr;
-	margin-left: 5rem;
-	padding: 2.5em 0;
-	background-color: white;
-	border-radius: 5px;
+	max-width: 100%;
+	filter: drop-shadow(1px 1px 3px $color-secondary);
 }
 
-/* ----- Photo Section ----- */
-.product__photo {
-	position: relative;
-}
 
-.photo-container {
-	position: relative;
-	left: -2.5em;
-	display: grid;
-	grid-template-rows: 1fr;
-	width: 100%;
-	height: 100%;
-	border-radius: 6px;
-	box-shadow: 4px 4px 25px -2px rgba(0, 0, 0, 0.3);
-}
+
+
 
 .photo-main {
 	border-radius: 6px 6px 0 0;
 	background-color: #9be010;
+	margin-top: 3rem;
+	border-radius: 1rem;
 	background: radial-gradient(#e5f89e, #96e001);
 
 	.controls {
@@ -89,38 +53,18 @@ img {
 	}
 
 	img {
-		position: absolute;
-		left: -3.5em;
-		top: 2em;
+
 		max-width: 110%;
-		filter: saturate(150%) contrast(120%) hue-rotate(10deg)
-			drop-shadow(1px 20px 10px rgba(0, 0, 0, 0.3));
+		filter: saturate(150%) contrast(120%) hue-rotate(10deg) drop-shadow(1px 20px 10px rgba(0, 0, 0, 0.3));
 	}
 }
 
-.photo-album {
-	padding: 0.7em 1em;
-	border-radius: 0 0 6px 6px;
-	background-color: #fff;
-
-	ul {
-		display: flex;
-		justify-content: space-around;
-	}
-
-	li {
-		float: left;
-		width: 55px;
-		height: 55px;
-		padding: 7px;
-		border: 1px solid $color-secondary;
-		border-radius: 3px;
-	}
-}
 
 /* ----- Informations Section ----- */
 .product__info {
 	padding: 0.8em 0;
+	margin-top: 3rem;
+
 }
 
 .title {
@@ -156,7 +100,7 @@ img {
 	}
 
 	li {
-		float:left;
+		float: left;
 		width: 80px;
 		height: 30px;
 		padding: 2.5px;
@@ -206,7 +150,7 @@ img {
 	font-weight: 700;
 	letter-spacing: 1.3px;
 	color: #e7e7e7;
-		background-color: $color-highlight;
+	background-color: $color-highlight;
 	box-shadow: 2px 2px 25px -7px $color-primary;
 	cursor: pointer;
 
@@ -224,7 +168,7 @@ img {
 	font-weight: 700;
 	letter-spacing: 1.3px;
 	color: #fff;
-	background-color: $color-highlight;
+	background-color: #ff2727;
 	box-shadow: 2px 2px 25px -7px $color-primary;
 	cursor: pointer;
 
@@ -236,10 +180,10 @@ img {
 .custom-select {
 	min-width: 350px;
 	position: relative;
-	width:60%;
-  }
-  
-  select {
+	width: 60%;
+}
+
+select {
 	appearance: none;
 	/*  safari  */
 	-webkit-appearance: none;
@@ -252,28 +196,30 @@ img {
 	border-radius: 0.25rem;
 	color: #000;
 	cursor: pointer;
-  }
-  
-  .custom-select::before,
-  .custom-select::after {
+}
+
+.custom-select::before,
+.custom-select::after {
 	--size: 0.3rem;
 	content: "";
 	position: absolute;
 	right: 1rem;
 	pointer-events: none;
-  }
-  
-  .custom-select::before {
+}
+
+.custom-select::before {
 	border-left: var(--size) solid transparent;
 	border-right: var(--size) solid transparent;
 	border-bottom: var(--size) solid black;
 	top: 40%;
-  }
-  
-  .custom-select::after {
+}
+
+.custom-select::after {
 	border-left: var(--size) solid transparent;
 	border-right: var(--size) solid transparent;
 	border-top: var(--size) solid black;
 	top: 55%;
-  }
-  
+}
+
+
+
